--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -417,24 +417,6 @@
                     <key>PlistPath</key>
                     <string>Contents/Info.plist</string>
                 </dict>
-                <dict>
-                    <key>Arch</key>
-                    <string></string>
-                    <key>BundlePath</key>
-                    <string>XHCI-unsupported.kext</string>
-                    <key>Comment</key>
-                    <string></string>
-                    <key>Enabled</key>
-                    <true/>
-                    <key>ExecutablePath</key>
-                    <string></string>
-                    <key>MaxKernel</key>
-                    <string></string>
-                    <key>MinKernel</key>
-                    <string></string>
-                    <key>PlistPath</key>
-                    <string>Contents/Info.plist</string>
-                </dict>
             </array>
             <key>Block</key>
             <array>
@@ -466,6 +448,8 @@
                 <key>MinKernel</key>
                 <string></string>
             </dict>
+            <key>Force</key>
+            <array/>
             <key>Patch</key>
             <array>
                 <dict>
@@ -652,7 +636,7 @@
             <key>Quirks</key>
             <dict>
                 <key>AppleCpuPmCfgLock</key>
-                <true/>
+                <false/>
                 <key>AppleXcpmCfgLock</key>
                 <true/>
                 <key>AppleXcpmExtraMsrs</key>
@@ -670,6 +654,8 @@
                 <key>ExtendBTFeatureFlags</key>
                 <false/>
                 <key>ExternalDiskIcons</key>
+                <false/>
+                <key>ForceSecureBootScheme</key>
                 <false/>
                 <key>IncreasePciBarSize</key>
                 <false/>
@@ -717,7 +703,7 @@
                 <key>PollAppleHotKeys</key>
                 <true/>
                 <key>ShowPicker</key>
-                <false/>
+                <true/>
                 <key>TakeoffDelay</key>
                 <integer>0</integer>
                 <key>Timeout</key>
@@ -757,6 +743,8 @@
                     <string>CustomOS</string>
                     <key>Path</key>
                     <string>PciRoot(0x0)/Pci(0x1,0x1)/Pci(0x0,0x0)/NVMe(0x1,11-22-33-44-55-66-77-88)/HD(1,GPT,00000000-0000-0000-0000-000000000000,0x800,0x64000)/\EFI\BOOT\BOOTX64.EFI</string>
+                    <key>TextMode</key>
+                    <false/>
                 </dict>
             </array>
             <key>Security</key>
@@ -769,10 +757,12 @@
                 <integer>0</integer>
                 <key>AuthRestart</key>
                 <false/>
+                <key>BlacklistAppleUpdate</key>
+                <false/>
                 <key>BootProtect</key>
                 <string>Bootstrap</string>
                 <key>DmgLoading</key>
-                <string>Disabled</string>
+                <string>Signed</string>
                 <key>EnablePassword</key>
                 <false/>
                 <key>ExposeSensitiveData</key>
@@ -805,6 +795,10 @@
                     <string>OpenShell.efi</string>
                     <key>Path</key>
                     <string>OpenShell.efi</string>
+                    <key>RealPath</key>
+                    <false/>
+                    <key>TextMode</key>
+                    <false/>
                 </dict>
             </array>
         </dict>
@@ -937,7 +931,7 @@
                 <key>SpoofVendor</key>
                 <true/>
                 <key>SystemMemoryStatus</key>
-                <string></string>
+                <string>Auto</string>
                 <key>SystemProductName</key>
                 <string>iMac19,1</string>
                 <key>SystemSerialNumber</key>
@@ -949,6 +943,8 @@
             <dict>
                 <key>DataWidth</key>
                 <integer>0</integer>
+                <key>Devices</key>
+                <array/>
                 <key>ErrorCorrection</key>
                 <integer>0</integer>
                 <key>FormFactor</key>
@@ -974,6 +970,8 @@
                 <string></string>
                 <key>ROM</key>
                 <data></data>
+                <key>SystemUUID</key>
+                <string></string>
             </dict>
             <key>SMBIOS</key>
             <dict>
