--- a/EFI-NoWifi/OC/config.plist
+++ b/EFI-NoWifi/OC/config.plist
@@ -161,6 +161,8 @@
             </array>
             <key>Quirks</key>
             <dict>
+                <key>AllowRelocationBlock</key>
+                <false/>
                 <key>AvoidRuntimeDefrag</key>
                 <true/>
                 <key>DevirtualiseMmio</key>
@@ -859,7 +861,7 @@
                     <key>boot-args</key>
                     <string>debug=0x100 keepsyms=1 alcid=1 -wegnoegpu</string>
                     <key>csr-active-config</key>
-                    <data>/w8AAA==</data>
+                    <data>AAAAAA==</data>
                     <key>prev-lang:kbd</key>
                     <string>en-US:0</string>
                     <key>run-efi-updater</key>
