--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -161,6 +161,8 @@
             </array>
             <key>Quirks</key>
             <dict>
+                <key>AllowRelocationBlock</key>
+                <false/>
                 <key>AvoidRuntimeDefrag</key>
                 <true/>
                 <key>DevirtualiseMmio</key>
@@ -293,13 +295,13 @@
                     <key>Arch</key>
                     <string></string>
                     <key>BundlePath</key>
-                    <string>AirportItlwm.kext</string>
+                    <string>AppleALC.kext</string>
                     <key>Comment</key>
                     <string></string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
-                    <string>Contents/MacOS/AirportItlwm</string>
+                    <string>Contents/MacOS/AppleALC</string>
                     <key>MaxKernel</key>
                     <string></string>
                     <key>MinKernel</key>
@@ -311,13 +313,13 @@
                     <key>Arch</key>
                     <string></string>
                     <key>BundlePath</key>
-                    <string>AppleALC.kext</string>
+                    <string>AirportItlwm.kext</string>
                     <key>Comment</key>
                     <string></string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
-                    <string>Contents/MacOS/AppleALC</string>
+                    <string>Contents/MacOS/AirportItlwm</string>
                     <key>MaxKernel</key>
                     <string></string>
                     <key>MinKernel</key>
@@ -913,7 +915,7 @@
                     <key>boot-args</key>
                     <string>debug=0x100 keepsyms=1 alcid=1 -wegnoegpu</string>
                     <key>csr-active-config</key>
-                    <data>/w8AAA==</data>
+                    <data>AAAAAA==</data>
                     <key>prev-lang:kbd</key>
                     <string>en-US:0</string>
                     <key>run-efi-updater</key>
