update debug log settings

--- a/OC-DEBUG/EFI/OC/config.plist
+++ b/OC-DEBUG/EFI/OC/config.plist
@@ -1216,7 +1216,7 @@
 			<key>AppleBootPolicy</key>
 			<false/>
 			<key>AppleDebugLog</key>
-			<true/>
+			<false/>
 			<key>AppleEvent</key>
 			<false/>
 			<key>AppleFramebufferInfo</key>
