--- a/OC-DEBUG/configs/config-AWAC-NoWiFiBT.plist
+++ b/OC-DEBUG/configs/config-AWAC-NoWiFiBT.plist
@@ -1170,7 +1170,7 @@
 			<key>AppleBootPolicy</key>
 			<false/>
 			<key>AppleDebugLog</key>
-			<true/>
+			<false/>
 			<key>AppleEvent</key>
 			<false/>
 			<key>AppleFramebufferInfo</key>
