--- a/EFI macOS12/OC/config.plist
+++ b/EFI macOS12/OC/config.plist
@@ -599,7 +599,7 @@
 				<key>boot-args</key>
 				<string>-v debug=0x100 keepsyms=1 alcid=1 -wegnoegpu</string>
 				<key>csr-active-config</key>
-				<data>7wcAAA==</data>
+				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
 				<data></data>
 				<key>run-efi-updater</key>
@@ -622,7 +622,6 @@
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<array>
 				<string>boot-args</string>
-				<string>csr-active-config</string>
 				<string>ForceDisplayRotationInEFI</string>
 			</array>
 		</dict>
