--- a/EFI macOS12/OC/config.plist
+++ b/EFI macOS12/OC/config.plist
@@ -590,7 +590,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>keepsyms=1 -wegnoegpu</string>
+				<string>-wegnoegpu -v keepsyms=1 debug=0x12a msgbuf=1048576</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
